# crate_python

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crate_python/: Cargo.toml
crate_python/src/: lib.rs  pyproject.rs
example_project/: README.md
example_project/pybin/: Cargo.toml  build.rs
example_project/pylib/: Cargo.toml
example_project/pylib/python/: pyproject.toml
example_project/pylib/python/pylib/: __init__.py
example_project/pylib/src/: lib.rs
example_project/pylib2/: Cargo.toml
example_project/pylib2/python/: pyproject.toml
example_project/pylib2/python/pylib2/: __init__.py
example_project/pylib2/src/: lib.rs
example_project/python_bin/: Cargo.toml  build.rs
example_project/python_bin/src/: main.rs
example_project/python_lib/: Cargo.toml
example_project/python_lib/python/: pyproject.toml
example_project/python_lib/src/: lib.rs
example_project/python_lib2/: Cargo.toml
example_project/python_lib2/python/: pyproject.toml
example_project/python_lib2/src/: lib.rs
python/: pyproject.toml
src/: main.rs
