[package]
name = "pybin"
version = "0.1.0"
edition = "2024"

[build-dependencies]
crate_python = { version = "0.1.0", path = "../../crate_python" }
pylib = { version = "0.1.0", path = "../pylib" }

[dependencies]
crate_python = { version = "0.1.0", path = "../../crate_python" }
pyo3 = { version = "0.23.4" }
