[project]
name = "pylib2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "whitingyan", email = "1712428442@qq.com" }]
dependencies = ["numpy>=2.2.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
